
@startuml

skinparam backgroundColor #FEFEFE
skinparam wrapWidth 600
package "DMA_Log" #DDDDDD
{

class "CConsoleCtrl"<< (S,#FF7700) Singleton >>
{
}

class "CConsoleInputProcessor"
{
}

}

package "Qt" #DDDDDD
{

class "QObject"
{
}

}

'====================Inheritance section====================
QObject <|-- CConsoleCtrl : extends
QObject <|-- CConsoleInputProcessor : extends

@enduml